# northern-sauna-marketing-analytics

./: .gitignore  README.md  pyproject.toml
.claude/: audit-loop.config.yaml
demo_data/: age_demographics.csv  bookings.csv  campaign_performance.csv  daily_marketing_summary.csv  device_demographics.csv  ga4_traffic.csv  gender_demographics.csv  google_ads_campaign_network.csv  google_ads_network.csv  google_ads_search_position.csv  location_performance.csv  location_performance_do.csv  platform_placement.csv  search_console_pages.csv  search_console_queries.csv
docs/: fixtures.md  progress.md
scripts/: generate_demo_data.py  validate_identifiers.sh
scripts/walkthrough/: .gitignore  package.json  record.mjs
sql/: create_tables.sql
sql/gdpr/: anonymize_tiered.sql  create_anonymized_view.sql  erase_customer.sql  export_customer.sql
sql/monitoring/: README.md  create_freshness_view.sql  data_freshness_check.sql
sql/views/: v_ad_copy_performance.sql  v_booking_trends.sql  v_bookings_member_enriched.sql  v_campaign_performance.sql  v_daily_marketing_summary.sql  v_google_ad_copy_performance.sql  v_google_creative_performance.sql  v_google_rsa_asset_performance.sql  v_google_video_performance.sql  v_location_performance.sql  v_location_performance_do.sql
streamlit/: app.py  bq_data_loader.py  requirements.txt  utils.py
streamlit/.streamlit/: config.toml  secrets.toml.example
streamlit/components/: demo_banner.py  live_build_stub.py
streamlit/data/: __init__.py  bq_client.py  feedback.py  pii.py  queries.py  session.py  status.py  transforms.py  weather.py
(+18 files in other folders)
